[package]
name = "axes"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dest-hq/axes"
keywords = ["layout", "cross-platform"]
description = "Fast layout engine"

[features]
no_std = []
types_stable_abi = []

[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.dependencies]
axes = { version = "0.2.0", path = "." }

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"
rand_chacha = "0.10.0"
taffy = "0.9.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "axes"
harness = false

[[bench]]
name = "taffy"
harness = false

[dependencies]
smallvec = "1.15.1"
